--- a/src/main.css
+++ b/src/main.css
@@ -1,9 +1,6 @@
 body{
     font-family: Helvetica, sans-serif
 }
-h1{
-    color: rebeccapurple
-}
 ::-webkit-scrollbar {
     width: 5px;
 }
@@ -36,7 +33,7 @@ div.app-header, div.app-footer{
     width: 100%;
     min-height: 25px;
     color: #fff;
-    background: #6200EE;
+    background: #3367d6;
     padding: 15px 10px;
     border: 1px solid #858585;
 }
