--- a/src/main.css
+++ b/src/main.css
@@ -67,8 +67,7 @@ tr td{
 }
 tr:hover td{
     height: 60px;
-    border-top: 2px solid #858585;
-    border-bottom: 3px solid #858585;
+    border: 2px solid #858585;
 }
 tr:hover{
     background-color: #f1f1f1;
